--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <div class="about row">
                 <h2>Simulation of Back and Arms I</h2>
                 <p class="para">
-                    <font color="red">Objectives:</font> 1.Understand center of gravity on different parts of a body; &nbsp 2.Use digital measurement tools to find level arms for forces;
+                    <font color="red">Objectives:</font> 1.Understand the centers of gravity on different parts of a body; &nbsp 2.Use digital measurement tools to find level arms for forces;
                     &nbsp   3.Apply the conditions of equilibrium to determine the amount of force that is exerted by the person's erector spinae muscle when the person is bending over to support a load;
                     &nbsp    4.Find out how the force on the person's erector spinae muscle depends on his/her weight and the weight of a load.
 </p>
