--- a/index.html
+++ b/index.html
@@ -100,10 +100,9 @@
                         <p class="para">
                         K represents the lower end of the spinal column. We consider it as the pivot, the person is balanced with the weight of the Trunk, 
                             Head and Neck (THN), the weight of the Arms and Hands (AH), the weight of the Load (L) and the force on the Erector Spinae muscle (ES). 
-                            W<sub>TNH</sub> and W<sub>AH</sub> are located on the center of gravity of the respective body parts.
+                            W<sub>TNH</sub> and W<sub>AH</sub> are located on the centers of gravity of the respective body parts.
 </p>
                         <p class="para">Download the photo(<a href="images/Therapy.png" download>Click to download the image</a>) and find the level arm values by using a digital measurement tool. (Information of the image: the load is 30 cm high. Please use this information for calibration.)</p>
-                        <p class="para">Download the photo and find the level arm values by using a digital measurement tool. (Information of the image: the load is 30 cm high. Please use this information for calibration.)</p>
                         
                         Weight of the person W= <input type="text" name="W" size="2" value="0" onmouseover="porkImage()" onmouseout="document.getElementById('mainpic').src='images/restaurant.jpg'">lb.
                         <table style="width:100%">
