--- a/research2.html
+++ b/research2.html
@@ -135,7 +135,7 @@
                                     <br>
                                     &#920<sub>TNH</sub>= <input type="text" name="THETATNH" size="6" value="0" onmouseover="porkImage()" onmouseout="document.getElementById('mainpic').src='images/restaurant.jpg'">&#730
                                     &nbsp&nbsp&nbsp&nbsp&nbsp &#920<sub>AH</sub>= <input type="text" name="THETAAH" size="6" value="0" onmouseover="porkImage()" onmouseout="document.getElementById('mainpic').src='images/restaurant.jpg'">&#730
-                                    &nbsp&nbsp&nbsp&nbsp&nbsp &#920<sub>ES</sub>= 0.5*&#920<sub>TNH</sub>= <input type="text" name="THETAES" size="6" value="NA" />&#730
+                                    &nbsp&nbsp&nbsp&nbsp&nbsp &#920<sub>ES</sub>= 5&#730<sub>TNH</sub>= <input type="text" name="THETAES" size="6" value="NA" />&#730
                                 </th>
                             </tr> -->
 
