--- a/research2.html
+++ b/research2.html
@@ -142,7 +142,7 @@
                                 <tr>
                                     <td></td>
                                     <td>&nbsp Force</td>
-                                    <td>&nbsp Level arm</td>
+                                    <td>&nbsp Lever arm</td>
                                 </tr>
                                 <tr>
                                     <td>&nbsp TNH</td>
