--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                             <tr>
                                 <td></td>
                                 <td>&nbsp Force</td>
-                                <td>&nbsp Level arm</td>
+                                <td>&nbsp Lever arm</td>
                             </tr>
                             <tr>
                                 <td>&nbsp TNH</td>
