--- a/research2.html
+++ b/research2.html
@@ -102,7 +102,7 @@
                     
                         <h4><span>Instruction:</span></h4>
                         <p class="para">
-                            000000The simulation is based on a normally proportioned person. 
+                            The simulation is based on a normally proportioned person. 
                             You can adjust the gestures of the person by inputting different values of &#920<sub>TNH</sub>  and &#920<sub>AH</sub>. 
                             For example, &#920<sub>TNH</sub>=0&#730 and &#920<sub>AH</sub>=90&#730 when a person stands with arms leveled. 
 
@@ -142,7 +142,7 @@
                                 <tr>
                                     <td></td>
                                     <td>&nbsp Force</td>
-                                    <td>&nbsp Lever111 arm</td>
+                                    <td>&nbsp Lever arm</td>
                                 </tr>
                                 <tr>
                                     <td>&nbsp TNH</td>
