--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <div class="about row">
                 <h2>Simulation of Back and Arms I</h2>
                 <p class="para">
-                    <font color="red">Objectives:</font> 1.Understand the centers of gravity on different parts of a body; &nbsp 2.Use digital measurement tools to find level arms for forces;
+                    <font color="red">Objectives:</font> 1.Understand the centers of gravity on different parts of a body; &nbsp 2.Use digital measurement tools to find lever arms for forces;
                     &nbsp   3.Apply the conditions of equilibrium to determine the amount of force that is exerted by the person's erector spinae muscle when the person is bending over to support a load;
                     &nbsp    4.Find out how the force on the person's erector spinae muscle depends on his/her weight and the weight of a load.
 </p>
@@ -102,7 +102,7 @@
                             Head and Neck (THN), the weight of the Arms and Hands (AH), the weight of the Load (L) and the force on the Erector Spinae muscle (ES). 
                             W<sub>TNH</sub> and W<sub>AH</sub> are located on the centers of gravity of the respective body parts.
 </p>
-                        <p class="para">Download the photo(<a href="images/Therapy.png" download>Click to download the image</a>) and find the level arm values by using a digital measurement tool. (Information of the image: the load is 30 cm high. Please use this information for calibration.)</p>
+                        <p class="para">Download the photo(<a href="images/Therapy.png" download>Click to download the image</a>) and find the lever arm values by using a digital measurement tool. (Information of the image: the load is 30 cm high. Please use this information for calibration.)</p>
                         
                         Weight of the person W= <input type="text" name="W" size="2" value="0" onmouseover="porkImage()" onmouseout="document.getElementById('mainpic').src='images/restaurant.jpg'">lb.
                         <table style="width:100%">
